# sml-comfyui-prompt-expansion

./: .gitignore  README.md  __init__.py  config.ini.example  pyproject.toml
js/: prompt_exp.js
nodes/: base_node.py  config.py
sml_prompt_exp/: base_node.py  exp_config.py
